# zkvm-foundry-template

./: Cargo.toml  README.md  deployment-guide.md
contracts/: BonsaiStarter.sol  BonsaiStarterLowLevel.sol
methods/guest/: Cargo.toml
relay/: Cargo.toml
script/: BonsaiDeploy.sol  Deploy.s.sol
tests/: BonsaiStarter.t.sol  BonsaiStarterLowLevel.t.sol
