[package]
name = "bonsai-ethereum-relay-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.6.2"
alloy-sol-types = "0.6.2"
anyhow = "1.0.79"
bincode = "1.3.3"
bonsai-ethereum-relay = { workspace = true }
bonsai-sdk = { workspace = true, features = ["async"] }
bytemuck = "1.14.1"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "env"] }
ethers ={ version = "2.0.11", default-features = false }
hex = "0.4.3"
methods = { workspace = true }
risc0-build = { workspace = true, features = ["guest-list"] }
risc0-zkvm = { workspace = true, default-features = false }
tokio = { version = "1.35.1", features = ["full", "sync"] }
