[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[dependencies]
alloy-primitives = { version = "0.6.2", default-features = false }
alloy-sol-types = { version = "0.6.2", default-features = false }
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }

[profile.release]
lto = true
opt-level = 3

[workspace]
